base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
spec:
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
        - name: backend-app
          image: 394952106077.dkr.ecr.ap-northeast-2.amazonaws.com/backend-app:latest
          ports:
            - containerPort: 3000
