base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: backend-app
